Made fix to gap on lander for mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -396,4 +396,7 @@ hr{
     .workFlexy{
         margin-bottom: 280px;
     }
+    .portHero{
+        gap: 20px;
+    }
 }
